Updated todo list

--- a/todo.html
+++ b/todo.html
@@ -39,14 +39,10 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Cut nails</li>
 <li><input type="checkbox" disabled="" />
 Buy sandals</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 39 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 40 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" />
@@ -66,9 +62,13 @@ Implement polynomial devision #programming</li>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Do maths 40 minutes #mathematics</li>
-<li><input type="checkbox" disabled="" />
 Do weekly integration week 38 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Do weekly integration week 39 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Do weekly integration week 40 #mathematics</li>
+<li><input type="checkbox" disabled="" checked="" />
+Do maths 40 minutes #mathematics</li>
 </ul>
 <h1 id="wait">Wait</h1>
 <h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
