--- a/todo.html
+++ b/todo.html
@@ -39,12 +39,22 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Do compulsory 2 #mathematics</li>
+</ul>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
-Cut nails</li>
+Texture birdnew #3d</li>
+<li><input type="checkbox" disabled="" checked="" />
+Print documents for Philip</li>
+<li><input type="checkbox" disabled="" checked="" />
+Do weekly integration week 38 #mathematics</li>
 <li><input type="checkbox" disabled="" />
-Buy sandals</li>
+Do weekly integration week 39 #mathematics</li>
 <li><input type="checkbox" disabled="" />
-Make carrot man as practice #intro-3d</li>
+Do weekly integration week 40 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
@@ -58,23 +68,15 @@ Implement PEMDAS, use a tree data structure #programming</li>
 <li><input type="checkbox" disabled="" />
 Implement polynomial devision #programming</li>
 </ul>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 38 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 39 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 40 #mathematics</li>
-<li><input type="checkbox" disabled="" checked="" />
-Do maths 40 minutes #mathematics</li>
-</ul>
 <h1 id="wait">Wait</h1>
 <h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Buy sandals</li>
+<li><input type="checkbox" disabled="" />
+Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Modern Graphics Programming files #programming</li>
 <li><input type="checkbox" disabled="" />
