Moved some items to wait. Added art addicts for today

--- a/todo.html
+++ b/todo.html
@@ -45,6 +45,8 @@ Do compulsory 2 #mathematics</li>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Go to art addicts</li>
 <li><input type="checkbox" disabled="" checked="" />
 Texture birdnew #3d</li>
 <li><input type="checkbox" disabled="" checked="" />
@@ -70,13 +72,15 @@ Implement polynomial devision #programming</li>
 </ul>
 <h1 id="wait">Wait</h1>
 <h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
-<h1 id="long-term-plan">Long term plan</h1>
-<h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Buy sandals</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
+</ul>
+<h1 id="long-term-plan">Long term plan</h1>
+<h6 id="update-weekly">Update Weekly</h6>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Modern Graphics Programming files #programming</li>
 <li><input type="checkbox" disabled="" />
