Added when to go to Philip's free lesson (which will be useful to him) to wait list

--- a/todo.html
+++ b/todo.html
@@ -77,6 +77,8 @@ Implement polynomial devision #programming</li>
 Buy sandals</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Go to Philip’s lesson at 10’o’clock at Hamar library -&gt; 5.oktober.2023</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
