Added name of room I reserved

--- a/todo.html
+++ b/todo.html
@@ -78,7 +78,7 @@ Buy sandals</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" />
-Go to Philip’s lesson at 10’o’clock at Hamar library -&gt; 5.oktober.2023</li>
+Go to Philip’s lesson at 10’o’clock at Hamar library -&gt; 5.oktober.2023 2N2108</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
