Added item to do for Philip

--- a/todo.html
+++ b/todo.html
@@ -41,6 +41,8 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Do compulsory 2 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Look at R1 exams</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
