--- a/todo.html
+++ b/todo.html
@@ -43,6 +43,8 @@
 Do compulsory 2 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Look at R1 exams</li>
+<li><input type="checkbox" disabled="" />
+Go to discord meeting Wednesday at 10:20</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
