Trying to add uml to my todo list for some reason

--- a/todo.html
+++ b/todo.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html lang=en>
 
 <head>
+
+<script src="//unpkg.com/graphre/dist/graphre.js"></script>
+<script src="//unpkg.com/nomnoml/dist/nomnoml.js"></script>
+
     <!-- FONT
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -39,99 +43,103 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Do compulsory 2 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Look at R1 exams</li>
-<li><input type="checkbox" disabled="" />
-Go to discord meeting Wednesday at 10:20</li>
+<li><label><input type="checkbox" />Do compulsory 3
+#programming</label></li>
+<li><label><input type="checkbox" />Look at R1 exams</label></li>
+<li><label><input type="checkbox" />Go to discord meeting Wednesday at
+10:20</label></li>
 </ul>
 <h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<h6
+id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
+time. Revisit. Flag what needs to be done today. The battle is to
+remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Go to art addicts</li>
-<li><input type="checkbox" disabled="" checked="" />
-Texture birdnew #3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Print documents for Philip</li>
-<li><input type="checkbox" disabled="" checked="" />
-Do weekly integration week 38 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 39 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration week 40 #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Go for a long walk early #health</li>
-<li><input type="checkbox" disabled="" />
-Read a book 20 minutes #recreation</li>
-<li><input type="checkbox" disabled="" />
-Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
-<li><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</li>
-<li><input type="checkbox" disabled="" />
-Implement PEMDAS, use a tree data structure #programming</li>
-<li><input type="checkbox" disabled="" />
-Implement polynomial devision #programming</li>
+<li><label><input type="checkbox" checked="" />Go to art
+addicts</label></li>
+<li><label><input type="checkbox" checked="" />Texture birdnew
+#3d</label></li>
+<li><label><input type="checkbox" checked="" />Print documents for
+Philip</label></li>
+<li><label><input type="checkbox" checked="" />Do weekly integration
+week 38 #mathematics</label></li>
+<li><label><input type="checkbox" checked="" />Go to Philip’s lesson at
+10’o’clock at Hamar library -&gt; 5.oktober.2023</label></li>
+<li><label><input type="checkbox" />Do compulsory 2
+#mathematics</label></li>
+<li><label><input type="checkbox" />Do weekly integration week 39
+#mathematics</label></li>
+<li><label><input type="checkbox" />Do weekly integration week 40
+#mathematics</label></li>
+<li><label><input type="checkbox" checked="" />Go for a long walk early
+#health</label></li>
+<li><label><input type="checkbox" />Read a book 20 minutes
+#recreation</label></li>
+<li><label><input type="checkbox" />Write script to do Modern Graphics
+Programming files (currently on tut05 out of tut18), make it as an
+append and prepend comment option in solid #programming</label></li>
+<li><label><input type="checkbox" />Fix delete cube bug
+#programming</label></li>
+<li><label><input type="checkbox" />Implement PEMDAS, use a tree data
+structure #programming</label></li>
+<li><label><input type="checkbox" />Implement polynomial devision
+#programming</label></li>
 </ul>
 <h1 id="wait">Wait</h1>
-<h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
+<h6
+id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered
+actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Buy sandals</li>
-<li><input type="checkbox" disabled="" />
-Make carrot man as practice #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Go to Philip’s lesson at 10’o’clock at Hamar library -&gt; 5.oktober.2023 2N2108</li>
+<li><label><input type="checkbox" checked="" />Buy sandals</label></li>
+<li><label><input type="checkbox" />Make carrot man as practice
+#intro-3d</label></li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Modern Graphics Programming files #programming</li>
-<li><input type="checkbox" disabled="" />
-Complete Piano4All</li>
-<li><input type="checkbox" disabled="" />
-Complete Blender Character Creator v2.0 for Video Games Design Course</li>
-<li><input type="checkbox" disabled="" />
-Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
-<li><input type="checkbox" disabled="" />
-Exam Practice Mathematics #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Complete Semester 1 Game School <a href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></li>
-<li><input type="checkbox" disabled="" />
-Do drawabox.com course</li>
-<li><input type="checkbox" disabled="" />
-Help Philip excel at R1</li>
+<li><label><input type="checkbox" />Modern Graphics Programming files
+#programming</label></li>
+<li><label><input type="checkbox" />Complete Piano4All</label></li>
+<li><label><input type="checkbox" />Complete Blender Character Creator
+v2.0 for Video Games Design Course</label></li>
+<li><label><input type="checkbox" />Complete Blender Creator 3: Learn 3D
+Modelling for Beginners</label></li>
+<li><label><input type="checkbox" />Exam Practice Mathematics
+#mathematics</label></li>
+<li><label><input type="checkbox" />Complete Semester 1 Game School <a
+href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
+<li><label><input type="checkbox" />Do drawabox.com course</label></li>
+<li><label><input type="checkbox" />Help Philip excel at R1</label></li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 2 -&gt; 29-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
-Compulsory 2 -&gt; 20-october-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Oblig 2 -&gt; 23-october-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" />
-Compulsory 3 -&gt; 27-october-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
-Compulsory 3 -&gt; 3-november-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Oblig 3 -&gt; 17-november-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" />
-Folder due -&gt; 1-december-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Written exam -&gt; 6-december-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
-Written exam -&gt; 11-december-2023 #mathematics-I</li>
+<li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
+1-september-2023 #programming-I</label></li>
+<li><label><input type="checkbox" checked="" />Oblig 1 -&gt;
+18-september-2023 #mathematics-I</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
+22-september-2023 #intro-3d</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 2 -&gt;
+29-september-2023 #programming-I</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 2 -&gt;
+20-october-2023 #intro-3d</label></li>
+<li><label><input type="checkbox" />Oblig 2 -&gt; 23-october-2023
+#mathematics-I</label></li>
+<li><label><input type="checkbox" />Compulsory 3 -&gt; 27-october-2023
+#programming-I</label></li>
+<li><label><input type="checkbox" />Compulsory 3 -&gt; 3-november-2023
+#intro-3d</label></li>
+<li><label><input type="checkbox" />Oblig 3 -&gt; 17-november-2023
+#mathematics-I</label></li>
+<li><label><input type="checkbox" />Folder due -&gt; 1-december-2023
+#intro-3d</label></li>
+<li><label><input type="checkbox" />Written exam -&gt; 6-december-2023
+#programming-I</label></li>
+<li><label><input type="checkbox" />Written exam -&gt; 11-december-2023
+#mathematics-I</label></li>
 </ul>
-<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
+<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each
+day (triage). Then weekly (big picture)</h6>
 
         </div>
         <div class="six columns portrait" style="margin-top: 15%">
@@ -360,5 +368,13 @@ addWeekNumber(5, 6, 53); // Bad
         </div>
      </div>
   </div>
+
+
+<canvas id="target-canvas"></canvas>
+<script>
+  var canvas = document.getElementById("target-canvas")
+  var source = "[nomnoml] is -> [awesome]"
+  nomnoml.draw(canvas, source)
+</script>
 
 </body></html>
