Trying to revert week column

--- a/todo.html
+++ b/todo.html
@@ -319,11 +319,11 @@ function addWeekNumber(calendar, row, week)
     e.insertBefore(para, firstElement);
 }
 
-//addWeekColumn(1);
-//addWeekColumn(2);
-//addWeekColumn(3);
-//addWeekColumn(4);
-//addWeekColumn(5);
+addWeekColumn(1);
+addWeekColumn(2);
+addWeekColumn(3);
+addWeekColumn(4);
+addWeekColumn(5);
 
 addWeekNumber(1, 1, 31);
 addWeekNumber(1, 2, 32);
