Center alignment for week number

--- a/todo.html
+++ b/todo.html
@@ -30,7 +30,11 @@
 			.jsCalendar tbody td.jsCalendar-colorful-red {border-color: #F6511D;}
 			.jsCalendar tbody td.jsCalendar-colorful-green {border-color: #7FB800;}
 
-			.weeknumber{width: 36px; height: 36px;}
+                        .weeknumber
+                        {
+                            text-align: center;
+                            width: 36px; height: 36px;
+                        }
 		</style>
 
 	</head>
