Moved red marker to Wednesday. Removed some items and reordered my list

--- a/todo.html
+++ b/todo.html
@@ -48,11 +48,7 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Do compulsory 3
-#programming</label></li>
 <li><label><input type="checkbox" />Look at R1 exams</label></li>
-<li><label><input type="checkbox" />Go to discord meeting Wednesday at
-10:20</label></li>
 </ul>
 <h1 id="action">Action</h1>
 <h6
@@ -60,26 +56,18 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" checked="" />Go to art
-addicts</label></li>
-<li><label><input type="checkbox" checked="" />Texture birdnew
-#3d</label></li>
-<li><label><input type="checkbox" checked="" />Print documents for
-Philip</label></li>
-<li><label><input type="checkbox" checked="" />Do weekly integration
-week 38 #mathematics</label></li>
-<li><label><input type="checkbox" checked="" />Go to Philip’s lesson at
-10’o’clock at Hamar library -&gt; 5.oktober.2023</label></li>
+<li><label><input type="checkbox" />Go for a long walk early
+#health</label></li>
 <li><label><input type="checkbox" />Do compulsory 2
 #mathematics</label></li>
+<li><label><input type="checkbox" />Read a book 20 minutes
+#recreation</label></li>
 <li><label><input type="checkbox" />Do weekly integration week 39
 #mathematics</label></li>
 <li><label><input type="checkbox" />Do weekly integration week 40
 #mathematics</label></li>
-<li><label><input type="checkbox" checked="" />Go for a long walk early
-#health</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
-#recreation</label></li>
+<li><label><input type="checkbox" />Do compulsory 3
+#programming</label></li>
 <li><label><input type="checkbox" />Write script to do Modern Graphics
 Programming files (currently on tut05 out of tut18), make it as an
 append and prepend comment option in solid #programming</label></li>
@@ -95,7 +83,8 @@ structure #programming</label></li>
 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered
 actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" checked="" />Buy sandals</label></li>
+<li><label><input type="checkbox" />Go to discord meeting Wednesday at
+10:20</label></li>
 <li><label><input type="checkbox" />Make carrot man as practice
 #intro-3d</label></li>
 </ul>
@@ -277,7 +266,7 @@ day (triage). Then weekly (big picture)</h6>
                 }
                 if (month == 10)
                 {
-                cal.colorfulSelect('5/10/2023', 'jsCalendar-colorful-red');
+                cal.colorfulSelect('11/10/2023', 'jsCalendar-colorful-red');
                 cal.colorfulSelect('20/10/2023', 'jsCalendar-colorful-orange');
                 cal.colorfulSelect('23/10/2023', 'jsCalendar-colorful-blue');
                 cal.colorfulSelect('27/10/2023', 'jsCalendar-colorful-green');
