Added learn to make music to the list

--- a/todo.html
+++ b/todo.html
@@ -110,6 +110,8 @@ Modelling for Beginners</label></li>
 <li><label><input type="checkbox" />Complete Semester 1 Game School <a
 href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
 <li><label><input type="checkbox" />Do drawabox.com course</label></li>
+<li><label><input type="checkbox" />Learn to make music <a
+href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></label></li>
 <li><label><input type="checkbox" />Help Philip excel at R1</label></li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
