Added music and camera projects

--- a/todo.html
+++ b/todo.html
@@ -56,6 +56,12 @@ href="https://news.ycombinator.com/item?id=37734875&amp;utm_term=comment">https:
 href="https://www.amazon.com/Mazes-Programmers-Twisty-Little-Passages/dp/1680500554?ie=UTF8&amp;*Version*=1&amp;*entries*=0">https://www.amazon.com/Mazes-Programmers-Twisty-Little-Passages/dp/1680500554?ie=UTF8&amp;<em>Version</em>=1&amp;<em>entries</em>=0</a></label></li>
 <li><label><input type="checkbox" />Buy supplies for drawabox.com
 course</label></li>
+<li><label><input type="checkbox" />Learn to play green sleeves on
+ukulele</label></li>
+<li><label><input type="checkbox" />Learn to play simple tunes on the
+ocarina</label></li>
+<li><label><input type="checkbox" />Find a project for the
+camera</label></li>
 </ul>
 <h1 id="action">Action</h1>
 <h6
