Added all recommended parts of the list

--- a/todo.html
+++ b/todo.html
@@ -120,6 +120,9 @@ href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https
 href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></label></li>
 <li><label><input type="checkbox" />Help Philip excel at R1</label></li>
 </ul>
+<h1 id="project-reference-material">Project reference material</h1>
+<h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a
+website for each project?</h6>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
 <li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
@@ -149,6 +152,17 @@ href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></
 </ul>
 <h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each
 day (triage). Then weekly (big picture)</h6>
+<h1 id="reference-material">Reference material</h1>
+<h6 id="goodies-you-come-across-in-life">Goodies you come across in
+life</h6>
+<ul>
+<li>Are Modern Macs Really NeXTSTEP in Disguise? <a
+href="https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s">https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s</a></li>
+<li>Julia: A Fresh Approach to Computing <a
+href="https://computationalthinking.mit.edu/Fall23/">https://computationalthinking.mit.edu/Fall23/</a></li>
+</ul>
+<h1 id="one-day">One day</h1>
+<h6 id="all-my-dreams">All my dreams</h6>
 
         </div>
         <div class="six columns portrait" style="margin-top: 15%">
