Put in english cv

--- a/todo.html
+++ b/todo.html
@@ -40,7 +40,7 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Do compulsory 2 #mathematics</li>
+Do compulsory 3 #programming</li>
 <li><input type="checkbox" disabled="" />
 Look at R1 exams</li>
 <li><input type="checkbox" disabled="" />
@@ -57,11 +57,15 @@ Texture birdnew #3d</li>
 Print documents for Philip</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly integration week 38 #mathematics</li>
+<li><input type="checkbox" disabled="" checked="" />
+Go to Philip’s lesson at 10’o’clock at Hamar library -&gt; 5.oktober.2023</li>
+<li><input type="checkbox" disabled="" />
+Do compulsory 2 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Do weekly integration week 39 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Do weekly integration week 40 #mathematics</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
@@ -77,12 +81,10 @@ Implement polynomial devision #programming</li>
 <h1 id="wait">Wait</h1>
 <h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Buy sandals</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Go to Philip’s lesson at 10’o’clock at Hamar library -&gt; 5.oktober.2023 2N2108</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
@@ -114,7 +116,7 @@ Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" checked="" />
 Compulsory 2 -&gt; 29-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Compulsory 2 -&gt; 20-october-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Oblig 2 -&gt; 23-october-2023 #mathematics-I</li>
