--- a/todo.html
+++ b/todo.html
@@ -169,6 +169,8 @@ href="https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s">https://www.youtub
 href="https://computationalthinking.mit.edu/Fall23/">https://computationalthinking.mit.edu/Fall23/</a></li>
 <li>Implementing Skeletal Animation
 (https://veeenu.github.io/blog/implementing-skeletal-animation/)[https://veeenu.github.io/blog/implementing-skeletal-animation/]</li>
+<li>How to Start Learning Computer Graphics Programming <a
+href="https://erkaman.github.io/posts/beginner_computer_graphics.html">https://erkaman.github.io/posts/beginner_computer_graphics.html</a></li>
 </ul>
 <h1 id="one-day">One day</h1>
 <h6 id="all-dreams-to-make-real">All dreams to make real</h6>
