--- a/todo.html
+++ b/todo.html
@@ -167,8 +167,8 @@ day (triage). Then weekly (big picture)</h6>
 href="https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s">https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s</a></li>
 <li>Julia: A Fresh Approach to Computing <a
 href="https://computationalthinking.mit.edu/Fall23/">https://computationalthinking.mit.edu/Fall23/</a></li>
-<li>Implementing Skeletal Animation
-(https://veeenu.github.io/blog/implementing-skeletal-animation/)[https://veeenu.github.io/blog/implementing-skeletal-animation/]</li>
+<li>Implementing Skeletal Animation <a
+href="https://veeenu.github.io/blog/implementing-skeletal-animation/">https://veeenu.github.io/blog/implementing-skeletal-animation/</a></li>
 <li>How to Start Learning Computer Graphics Programming <a
 href="https://erkaman.github.io/posts/beginner_computer_graphics.html">https://erkaman.github.io/posts/beginner_computer_graphics.html</a></li>
 </ul>
