Updated actions for today

--- a/todo.html
+++ b/todo.html
@@ -47,24 +47,29 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><label><input type="checkbox" />Give Philip another mathematics
+lesson</label></li>
+<li><label><input type="checkbox" />Open door for carpenters at
+08:30</label></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
-<ul class="task-list">
-<li><label><input type="checkbox" />Give Philip a mathematics
-lesson</label></li>
-<li><label><input type="checkbox" />Go to board games night</label></li>
-<li><label><input type="checkbox" />Shave beard</label></li>
-<li><label><input type="checkbox" />Wash clothes</label></li>
-<li><label><input type="checkbox" />Take dry clothes up</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
-#recreation</label></li>
-</ul>
 <h1 id="action">Action</h1>
 <h6
 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Shave beard</label></li>
+<li><label><input type="checkbox" checked="" />Wash clothes</label></li>
+<li><label><input type="checkbox" checked="" />Take dry clothes
+up</label></li>
+<li><label><input type="checkbox" checked="" />Read a book 20 minutes
+#recreation</label></li>
+<li><label><input type="checkbox" checked="" />Give Philip a mathematics
+lesson</label></li>
+<li><label><input type="checkbox" />Go to board games night</label></li>
 <li><label><input type="checkbox" checked="" />Go for a long walk early
 #health</label></li>
 <li><label><input type="checkbox" />Do compulsory 2
