Added more items to inbox

--- a/todo.html
+++ b/todo.html
@@ -52,6 +52,8 @@
 lesson</label></li>
 <li><label><input type="checkbox" />Open door for carpenters at
 08:30</label></li>
+<li><label><input type="checkbox" />Go for a long walk early
+#health</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -70,16 +72,12 @@ up</label></li>
 <li><label><input type="checkbox" checked="" />Give Philip a mathematics
 lesson</label></li>
 <li><label><input type="checkbox" />Go to board games night</label></li>
-<li><label><input type="checkbox" checked="" />Go for a long walk early
-#health</label></li>
 <li><label><input type="checkbox" />Do compulsory 2
 #mathematics</label></li>
 <li><label><input type="checkbox" checked="" />Read a book 20 minutes
 #recreation</label></li>
 <li><label><input type="checkbox" checked="" />Do weekly integration
-week 39 #mathematics</label></li>
-<li><label><input type="checkbox" checked="" />Do weekly integration
-week 40 #mathematics</label></li>
+week 41 #mathematics</label></li>
 <li><label><input type="checkbox" />Do compulsory 3
 #programming</label></li>
 <li><label><input type="checkbox" />Write script to do Modern Graphics
