--- a/todo.html
+++ b/todo.html
@@ -72,12 +72,12 @@ up</label></li>
 <li><label><input type="checkbox" checked="" />Give Philip a mathematics
 lesson</label></li>
 <li><label><input type="checkbox" />Go to board games night</label></li>
+<li><label><input type="checkbox" />Do weekly integration week 41
+#mathematics</label></li>
 <li><label><input type="checkbox" />Do compulsory 2
 #mathematics</label></li>
 <li><label><input type="checkbox" checked="" />Read a book 20 minutes
 #recreation</label></li>
-<li><label><input type="checkbox" checked="" />Do weekly integration
-week 41 #mathematics</label></li>
 <li><label><input type="checkbox" />Do compulsory 3
 #programming</label></li>
 <li><label><input type="checkbox" />Write script to do Modern Graphics
