Did week42 maths

--- a/todo.html
+++ b/todo.html
@@ -72,8 +72,8 @@ up</label></li>
 <li><label><input type="checkbox" checked="" />Give Philip a mathematics
 lesson</label></li>
 <li><label><input type="checkbox" />Go to board games night</label></li>
-<li><label><input type="checkbox" />Do weekly integration week 41
-#mathematics</label></li>
+<li><label><input type="checkbox" checked="" />Do weekly integration
+week 41 #mathematics</label></li>
 <li><label><input type="checkbox" />Do compulsory 2
 #mathematics</label></li>
 <li><label><input type="checkbox" checked="" />Read a book 20 minutes
