Checked off some items on todo list

--- a/todo.html
+++ b/todo.html
@@ -47,14 +47,6 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
-<li><label><input type="checkbox" />Give Philip another mathematics
-lesson</label></li>
-<li><label><input type="checkbox" />Open door for carpenters at
-08:30</label></li>
-<li><label><input type="checkbox" />Go for a long walk early
-#health</label></li>
-</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -64,6 +56,12 @@ time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Shave beard</label></li>
+<li><label><input type="checkbox" />Go for a long walk early
+#health</label></li>
+<li><label><input type="checkbox" checked="" />Give Philip another
+mathematics lesson</label></li>
+<li><label><input type="checkbox" checked="" />Open door for carpenters
+at 08:30</label></li>
 <li><label><input type="checkbox" checked="" />Wash clothes</label></li>
 <li><label><input type="checkbox" checked="" />Take dry clothes
 up</label></li>
@@ -71,7 +69,8 @@ up</label></li>
 #recreation</label></li>
 <li><label><input type="checkbox" checked="" />Give Philip a mathematics
 lesson</label></li>
-<li><label><input type="checkbox" />Go to board games night</label></li>
+<li><label><input type="checkbox" checked="" />Go to board games
+night</label></li>
 <li><label><input type="checkbox" checked="" />Do weekly integration
 week 41 #mathematics</label></li>
 <li><label><input type="checkbox" />Do compulsory 2
