Worked hard today

--- a/todo.html
+++ b/todo.html
@@ -54,9 +54,9 @@
 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
-<ul class="task-list">
+<ul>
 <li><label><input type="checkbox" />Shave beard</label></li>
-<li><label><input type="checkbox" />Go for a long walk early
+<li><label><input type="checkbox" checked="" />Go for a long walk early
 #health</label></li>
 <li><label><input type="checkbox" checked="" />Give Philip another
 mathematics lesson</label></li>
@@ -73,8 +73,7 @@ lesson</label></li>
 night</label></li>
 <li><label><input type="checkbox" checked="" />Do weekly integration
 week 41 #mathematics</label></li>
-<li><label><input type="checkbox" />Do compulsory 2
-#mathematics</label></li>
+<li>[-] Do compulsory 2 #mathematics</li>
 <li><label><input type="checkbox" checked="" />Read a book 20 minutes
 #recreation</label></li>
 <li><label><input type="checkbox" />Do compulsory 3
