Finished some items

--- a/todo.html
+++ b/todo.html
@@ -47,17 +47,24 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul>
+<li>[] Make mazes</li>
+<li>[] Recreate fsn</li>
+<li>[] Buy new trousers</li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Make washing water</li>
 <li><input type="checkbox" disabled="" />
 Clean bathroom floors</li>
 <li><input type="checkbox" disabled="" />
+Go to art addicts</li>
+<li><input type="checkbox" disabled="" checked="" />
 Clean toilet</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Clean sink</li>
 <li><input type="checkbox" disabled="" />
 Clean shower walls</li>
@@ -69,10 +76,13 @@ Shave beard</li>
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
-<li>[-] Do compulsory 2 #mathematics</li>
+<li><input type="checkbox" disabled="" checked="" />
+Do compulsory 2 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Do compulsory 3 #programming</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
@@ -97,10 +107,6 @@ Purchase mazes for programmers <a href="https://www.amazon.com/Mazes-Programmers
 </ul>
 <h1 id="wait">Wait</h1>
 <h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Make carrot man as practice #intro-3d</li>
-</ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
