Moved inbox to actions

--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,9 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Make mazes</li>
@@ -54,11 +57,6 @@ Make mazes</li>
 Recreate fsn</li>
 <li><input type="checkbox" disabled="" />
 Buy new trousers</li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Make washing water</li>
 <li><input type="checkbox" disabled="" />
@@ -73,6 +71,8 @@ Clean sink</li>
 Clean shower walls</li>
 <li><input type="checkbox" disabled="" />
 Take dry clothes up</li>
+<li><input type="checkbox" disabled="" />
+Clean clothes</li>
 <li><input type="checkbox" disabled="" />
 Shave beard</li>
 <li><input type="checkbox" disabled="" />
