Done reading when life sucks by Oda Rygh

--- a/todo.html
+++ b/todo.html
@@ -78,7 +78,7 @@ clothes</label></li>
 <li><label><input type="checkbox" />Shave beard</label></li>
 <li><label><input type="checkbox" checked="" />Go for a long walk early
 #health</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
+<li><label><input type="checkbox" checked="" />Read a book 20 minutes
 #recreation</label></li>
 <li><label><input type="checkbox" checked="" />Do compulsory 2
 #mathematics</label></li>
