Added some super important actions to inbox

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,14 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Go to Ulrik’s lesson</label></li>
+<li><label><input type="checkbox" />Reference all books in private
+library</label></li>
+<li><label><input type="checkbox" />Reference all bookmarks and delete
+them</label></li>
+<li><label><input type="checkbox" />Make Project Support
+Materials</label></li>
+<li><label><input type="checkbox" />List all active courses I want to
+complete</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
