--- a/todo.html
+++ b/todo.html
@@ -92,7 +92,7 @@ clothes</label></li>
 #mathematics</label></li>
 <li><label><input type="checkbox" />Make carrot man as practice
 #intro-3d</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
+<li><label><input type="checkbox" checked="" />Read a book 20 minutes
 #recreation</label></li>
 <li><label><input type="checkbox" checked="" />Do compulsory 3
 #programming</label></li>
