Added inbox item to do numerical methods for fun

--- a/todo.html
+++ b/todo.html
@@ -57,6 +57,8 @@ NextStep</label></li>
 for raylib</label></li>
 <li><label><input type="checkbox" />Reconsider UML (made in
 nomnoml)</label></li>
+<li><label><input type="checkbox" />Implement numerical methods for
+Mathematics I for the computer</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
