Added another item to inbox

--- a/todo.html
+++ b/todo.html
@@ -59,6 +59,8 @@ for raylib</label></li>
 nomnoml)</label></li>
 <li><label><input type="checkbox" />Implement numerical methods for
 Mathematics I for the computer</label></li>
+<li><label><input type="checkbox" />Do compulsory 3 in 3D
+#intro-3d</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -68,7 +70,8 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Go to Ulrik’s lesson</label></li>
+<li><label><input type="checkbox" checked="" />Go to Ulrik’s
+lesson</label></li>
 <li><label><input type="checkbox" />Reference all books in private
 library</label></li>
 <li><label><input type="checkbox" />Reference all bookmarks and delete
