--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,13 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
+#atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6
+id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
+time. Revisit. Flag what needs to be done today. The battle is to
+remember what to do!</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Vacuum room</label></li>
 <li><label><input type="checkbox" />Recreate my old games with new
@@ -59,19 +66,8 @@ for raylib</label></li>
 nomnoml)</label></li>
 <li><label><input type="checkbox" />Implement numerical methods for
 Mathematics I for the computer</label></li>
-<li><label><input type="checkbox" />Do compulsory 3 in 3D
+<li><label><input type="checkbox" checked="" />Do compulsory 3 in 3D
 #intro-3d</label></li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
-#atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6
-id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
-time. Revisit. Flag what needs to be done today. The battle is to
-remember what to do!</h6>
-<ul class="task-list">
-<li><label><input type="checkbox" checked="" />Go to Ulrik’s
-lesson</label></li>
 <li><label><input type="checkbox" />Reference all books in private
 library</label></li>
 <li><label><input type="checkbox" />Reference all bookmarks and delete
@@ -149,12 +145,12 @@ website for each project?</h6>
 29-september-2023 #programming-I</label></li>
 <li><label><input type="checkbox" checked="" />Compulsory 2 -&gt;
 20-october-2023 #intro-3d</label></li>
-<li><label><input type="checkbox" />Oblig 2 -&gt; 23-october-2023
-#mathematics-I</label></li>
-<li><label><input type="checkbox" />Compulsory 3 -&gt; 27-october-2023
-#programming-I</label></li>
-<li><label><input type="checkbox" />Compulsory 3 -&gt; 3-november-2023
-#intro-3d</label></li>
+<li><label><input type="checkbox" checked="" />Oblig 2 -&gt;
+23-october-2023 #mathematics-I</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 3 -&gt;
+27-october-2023 #programming-I</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 3 -&gt;
+3-november-2023 #intro-3d</label></li>
 <li><label><input type="checkbox" />Oblig 3 -&gt; 17-november-2023
 #mathematics-I</label></li>
 <li><label><input type="checkbox" />Folder due -&gt; 1-december-2023
