--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,12 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><label><input type="checkbox" />Take out washing</label></li>
+<li><label><input type="checkbox" />Bring up clean clothes</label></li>
+<li><label><input type="checkbox" />Read for minimum 20
+minutes</label></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
